--- a/pages/style.css
+++ b/pages/style.css
@@ -32,13 +32,23 @@ h1{
 }
 h2{
 	padding:0;
-	margin:0;
+	margin:0 10px;
 }
 h3{
-	margin-bottom: 0;
+	padding: 0;
+	margin: 4px 10px;
 	font-size: 10pt;
-	margin-left: 4px;
 	color: #414143;
+}
+a{
+	color: #a6a6a2;
+}
+a.active{
+	color: #0fa0bb;
+}
+p{
+	margin: 0 10px;
+	font-size: 10pt;
 }
 div.roundedBox{
 	height: 200px;
@@ -76,10 +86,19 @@ html[xmlns] .clearfix {
 	height: 1%;
 }
 
-
+.graph-holder{
+	padding-top:10px;
+}
 
 
 .graph{
 	width: auto;
 	height:200px;
+	margin-top:-8px;
+	margin-left:-46px;
+	margin-right:-22px;
+	border-radius: 10px 0 10px 0;
+}
+div.flot-y-axis.flot-y1-axis.yAxis.y1Axis{
+	margin-left: -10px;
 }
